force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Psychiatric</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>