force-app/main/default/objects/Account/fields/Department_type__c.field-meta.xml
<CustomField>
    <fullName>Department_type__c</fullName>
    <label>Department type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>