force-app/main/default/objects/Account/fields/Doctor_payments__c.field-meta.xml
<CustomField>
    <fullName>Doctor_payments__c</fullName>
    <label>Doctor payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>