force-app/main/default/objects/Account/fields/Doctor_payments_to_receive_bonus__c.field-meta.xml
<CustomField>
    <fullName>Doctor_payments_to_receive_bonus__c</fullName>
    <label>Doctor payments to receive bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>