force-app/main/default/objects/Account/recordTypes/Hospital_department.recordType-meta.xml
<RecordType>
    <fullName>Hospital_department</fullName>
    <active>true</active>
    <label>Hospital department</label>
</RecordType>