force-app/main/default/objects/Account/validationRules/Psyhiatric_department.validationRule-meta.xml
<ValidationRule>
    <fullName>Psyhiatric_department</fullName>
    <active>true</active>
    <description>Psychiatric department can be available only for department type “Adult”</description>
    <errorConditionFormula>AND(ISPICKVAL( Department__c ,&apos;Psychiatric&apos; ), NOT( ISPICKVAL( Department_type__c , &apos;Adult&apos;) ) )</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Psychiatric department can be available only for department type “Adult”</errorMessage>
</ValidationRule>