force-app/main/default/objects/Account/validationRules/Select_account_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_account_type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type, &apos;&apos;)</errorConditionFormula>
    <errorMessage>You should chose account type</errorMessage>
</ValidationRule>